--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,9 +21,9 @@
             "program": "${workspaceFolder}/bin/SIT_client",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${fileDirname}",
+            "cwd": "${workspaceFolder}",
             "environment": [],
-            "externalConsole": false,
+            "externalConsole": true,
             "MIMode": "lldb",
             "preLaunchTask":"生成 SIT client"
         },
@@ -34,7 +34,7 @@
             "program": "${workspaceFolder}/bin/SIT_server",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${fileDirname}",
+            "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": false,
             "MIMode": "lldb",
